
                CHANGES IN party VERSION 1.1-1 (2016-11-23)

    o    fix memory leak


                CHANGES IN party VERSION 1.1-0 (2016-11-18)

    o    don't change values of R objects in C code, this caused
         problems with byte compiling. ctree_memory() had to be
         removed in this process.


                CHANGES IN party VERSION 1.0-26 (2016-09-01)

    o    compare with libcoin instead of coin


                CHANGES IN party VERSION 1.0-25 (2015-11-04)

    o    remove show from export


                CHANGES IN party VERSION 1.0-24 (2015-08-25)

    o    initialize, show needed import


                CHANGES IN party VERSION 1.0-23 (2015-08-14)

    o    update Rout.saves to coin 1.1-0: logrank_trafo now
         has the same sign for each tie handling method which
         changes some of the cut-points

                CHANGES IN party VERSION 1.0-22 (2015-07-28)

    o    NAMESPACE update


                CHANGES IN party VERSION 1.0-21 (2015-06-06)

    o    reference output updated for recent versions of R


                CHANGES IN party VERSION 1.0-20 (2015-02-18)

    o    is.na.Surv is now an S3 generic in survival 2.37-7


                CHANGES IN party VERSION 1.0-19 (2014-12-17)

    o    directly link to mvtnorm and thus make duplication of 
         FORTRAN code obsolate.

    o    export prettytree (for package mlmeta by Andrew Z)


                CHANGES IN party VERSION 1.0-18 (2014-11-10)

    o    internal call to svd acummulated memory until the 
         garbage collector was able to clean up (only after the 
         whole forest was grown). Fix by Philip Montgomery
         <pmontgom@broadinstitute.org>.


                CHANGES IN party VERSION 1.0-17 (2014-09-17)

    o    move initialize methods of coin classes to coin and
         re-import them


                CHANGES IN party VERSION 1.0-16 (2014-08-18)

    o    import("grid")


                CHANGES IN party VERSION 1.0-15 (2014-06-26)
